chore: update project name and tsconfig rootDir
Update project name from "express-standard-template2" to "sample-apis" across all configuration files
Add rootDir to tsconfig to explicitly specify source directory

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-standard-template2",
+  "name": "sample-apis",
   "version": "1.0.0",
   "description": "An Express.js template with TypeScript, ESLint, Prettier, Vitest, Husky, Rate Limiter, Morgan, Cors and Helmet",
   "type": "module",
@@ -22,15 +22,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anand-jaiswal-IN/express-standard-template2.git"
+    "url": "git+https://github.com/anand-jaiswal-IN/sample-apis.git"
   },
   "keywords": [],
   "author": "Anand Jaiswal",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/anand-jaiswal-IN/express-standard-template2/issues"
+    "url": "https://github.com/anand-jaiswal-IN/sample-apis/issues"
   },
-  "homepage": "https://github.com/anand-jaiswal-IN/express-standard-template2#readme",
+  "homepage": "https://github.com/anand-jaiswal-IN/sample-apis#readme",
   "imports": {
     "#*": "./src/*"
   },
