style(tsconfig): format tsconfig.json for better readability
Reformat the file to improve readability by adding line breaks for array elements while maintaining the same configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,19 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "#*": ["src/*"]
+      "#*": [
+        "src/*"
+      ]
     },
-    "lib": ["es2022"]
+    "lib": [
+      "es2022"
+    ]
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
-  "exclude": ["dist"]
+  "include": [
+    "src/**/*.ts",
+    "tests/**/*.ts"
+  ],
+  "exclude": [
+    "dist"
+  ]
 }
