--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,19 +5,10 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "#*": [
-        "src/*"
-      ]
+      "#*": ["src/*"]
     },
-    "lib": [
-      "es2022"
-    ]
+    "lib": ["es2022"]
   },
-  "include": [
-    "src/**/*.ts",
-    "tests/**/*.ts"
-  ],
-  "exclude": [
-    "dist"
-  ]
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "exclude": ["dist"]
 }
