feat(auth): implement comprehensive authentication system with Google OAuth and email verification
- Add complete authentication API with signup, signin, and Google OAuth 2.0
- Implement JWT-based authentication with access and refresh tokens
- Add email verification and password management features
- Integrate Cloudinary for avatar uploads with optimization
- Set up PostgreSQL database with Drizzle ORM
- Add comprehensive rate limiting and security measures
- Include full test suite with authentication flow tests
- Add extensive documentation including API reference and deployment guide
- Configure environment variables for production deployment

BREAKING CHANGE: This implementation replaces the existing project structure with a complete authentication system. The previous husky configuration has been removed and replaced with a new development workflow.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,85 @@
+# Database Configuration
+DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
+
+# JWT Configuration
+JWT_SECRET="your-super-secret-jwt-key-here"
+JWT_ACCESS_EXPIRES_IN="15m"
+JWT_REFRESH_SECRET="your-super-secret-refresh-key-here"
+JWT_REFRESH_EXPIRES_IN="7d"
+
+# Google OAuth 2.0 Configuration
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GOOGLE_CALLBACK_URL="http://localhost:3000/auth/google/callback"
+
+# Email Service Configuration (Resend)
+RESEND_API_KEY="your-resend-api-key"
+FROM_EMAIL="noreply@yourdomain.com"
+
+# Cloudinary Configuration
+CLOUDINARY_API_KEY="your-cloudinary-api-key"
+CLOUDINARY_API_SECRET="your-cloudinary-api-secret"
+CLOUDINARY_CLOUD_NAME="your-cloudinary-cloud-name"
+
+# Rate Limiting Configuration
+AUTH_RATE_LIMIT_WINDOW="900000"  # 15 minutes in milliseconds
+AUTH_RATE_LIMIT_MAX="5"         # Maximum 5 requests per window
+RATE_LIMIT_WINDOW_MS="900000"    # 15 minutes in milliseconds
+RATE_LIMIT_MAX_REQUESTS="100"    # Maximum 100 requests per window
+
+# Server Configuration
 PORT=3000
-NODE_ENV=development/production
+NODE_ENV=development
 
-# CORS configuration
-CORS_ORIGIN=*
+# Frontend URL (for redirects)
+FRONTEND_URL="http://localhost:3000"
 
-# Helmet Content Security Policy (optional)
-# Example: HELMET_CSP=https://yourdomain.com
-HELMET_CSP=
+# Email Verification Configuration
+EMAIL_VERIFICATION_EXPIRES_IN="24h"  # 24 hours
+
+# Password Reset Configuration
+PASSWORD_RESET_EXPIRES_IN="1h"      # 1 hour
+
+# Session Configuration
+SESSION_SECRET="your-session-secret"
+SESSION_MAX_AGE=86400000            # 24 hours in milliseconds
+
+# CORS Configuration
+CORS_ORIGIN="http://localhost:3000"
+
+# File Upload Configuration
+MAX_FILE_SIZE=5242880              # 5MB in bytes
+ALLOWED_FILE_TYPES="image/jpeg,image/png,image/gif,image/webp"
+
+# Security Configuration
+BCRYPT_ROUNDS=12
+TRUST_PROXY=true
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FILE=logs/app.log
+
+# Analytics Configuration (Optional)
+ANALYTICS_ENABLED=false
+ANALYTICS_PROVIDER="google"  # google, mixpanel, etc.
+ANALYTICS_ID="your-analytics-id"
+
+# Monitoring Configuration (Optional)
+SENTRY_DSN="your-sentry-dsn"
+MONITORING_ENABLED=true
+
+# Cache Configuration (Optional)
+CACHE_ENABLED=false
+CACHE_TTL=3600  # 1 hour in seconds
+CACHE_PROVIDER="redis"  # redis, memory
+
+# Database Pool Configuration
+DB_POOL_MIN=2
+DB_POOL_MAX=10
+DB_POOL_ACQUIRE=30000  # 30 seconds
+DB_POOL_IDLE=10000     # 10 seconds
+
+# SSL Configuration (for production)
+SSL_ENABLED=false
+SSL_KEY_PATH=""
+SSL_CERT_PATH=""
