--- a/package.json
+++ b/package.json
@@ -44,22 +44,34 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
+    "postgresql": "^0.0.1",
+    "resend": "^6.0.1",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tsconfig/node22": "^22.0.2",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/eslint-plugin": "^1.3.4",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
     "eslint-plugin-perfectionist": "^4.15.0",
     "husky": "^9.1.7",
